--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "SET NODE_ENV=development& nodemon index.js",
-    "prod": "SET NODE_ENV=production& nodemon index.js"
+    "prod": "SET NODE_ENV=production& nodemon index.js",
+    "server": "node index.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
