multi auth modified and tested for login, email verify, tokens, etc

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ REFRESH_TOKEN_SECRET=
 RESET_TOKEN_SECRET=
 
 # Database
-DATABASE_URL=
+DATABASE_URL=postgresql://user:password@localhost:5432/db_name?schema=public
 
 # Mailer
 MAIL_HOST=
