--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "Backend Base With Express.js",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=development& nodemon index.js",
-    "prod": "SET NODE_ENV=production& nodemon index.js"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "start": "node index.js",
+    "prod": "SET NODE_ENV=production& nodemon index.js",
+    "dev": "SET NODE_ENV=development& nodemon index.js"
   },
   "author": "Md. Tauhid",
   "license": "ISC",
