--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-base",
   "version": "1.0.0",
   "description": "Backend Base With Express.js",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node index.js",
     "prod": "SET NODE_ENV=production& nodemon index.js",
