--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "express-base",
   "version": "1.0.0",
   "description": "Backend Base With Express.js",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "prod": "SET NODE_ENV=production& nodemon index.js",
-    "dev": "SET NODE_ENV=development& nodemon index.js"
+    "start": "node app.js",
+    "prod": "SET NODE_ENV=production& nodemon app.js",
+    "dev": "SET NODE_ENV=development& nodemon app.js"
   },
   "author": "Md. Tauhid",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.3",
@@ -29,7 +30,6 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1",
     "prisma": "^5.7.0"
   }
