--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "prod": "SET NODE_ENV=production& nodemon app.js",
     "dev": "SET NODE_ENV=development& nodemon app.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "author": "Md. Tauhid",
   "license": "ISC",
   "dependencies": {
