--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "node-device-detector": "^2.0.17",
     "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
