--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.4.3",
     "express-rate-limit": "^7.1.3",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
