--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "prod": "SET NODE_ENV=production& nodemon app.js",
-    "dev": "SET NODE_ENV=development& nodemon app.js"
+    "prod": "cross-env NODE_ENV=production nodemon app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -16,7 +16,6 @@
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
-    "bullmq": "^4.14.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
@@ -35,6 +34,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^3.0.1",
     "prisma": "^5.8.1"
   }
