All package dependencies are updated to their latest version (No breaking tested)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-base",
-  "version": "1.0.0",
-  "description": "Backend Base With Express.js",
+  "name": "schooling-backend",
+  "version": "1.1.0",
+  "description": "School management With Express.js",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
