--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "node-cron": "^3.0.3",
     "node-device-detector": "^2.0.17",
     "nodemailer": "^6.9.12",
     "socket.io": "^4.7.4",
